{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 81,
  "lineage": "94a079d5-167f-e3dd-cd65-6f639f34a64c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0341605266baf6649",
            "owner_id": "051309595190",
            "tags": {
              "Name": "terraform-eks-prod"
            },
            "vpc_id": "vpc-0291b670a83da30e2"
          },
          "depends_on": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bd33b729234319c5",
            "owner_id": "051309595190",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0341605266baf6649",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0291b670a83da30e2"
          },
          "depends_on": [
            "aws_internet_gateway.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048476cdede9c2aa8",
            "route_table_id": "rtb-0bd33b729234319c5",
            "subnet_id": "subnet-0129b1754e584255a"
          },
          "depends_on": [
            "aws_route_table.prod",
            "aws_subnet.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e074c2c8305bd0",
            "route_table_id": "rtb-0bd33b729234319c5",
            "subnet_id": "subnet-09910bd144f255383"
          },
          "depends_on": [
            "aws_route_table.prod",
            "aws_subnet.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:051309595190:security-group/sg-064aca5f1c9f3a0cf",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064aca5f1c9f3a0cf",
            "ingress": [],
            "name": "terraform-eks-prod-cluster",
            "name_prefix": null,
            "owner_id": "051309595190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291b670a83da30e2"
          },
          "depends_on": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:051309595190:security-group/sg-0e115802df1c0a3e7",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e115802df1c0a3e7",
            "ingress": [],
            "name": "terraform-eks-prod-node",
            "name_prefix": null,
            "owner_id": "051309595190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-prod-node",
              "kubernetes.io/cluster/eks-kube-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0291b670a83da30e2"
          },
          "depends_on": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prod-cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3909765120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064aca5f1c9f3a0cf",
            "self": false,
            "source_security_group_id": "sg-0e115802df1c0a3e7",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.prod-cluster",
            "aws_security_group.prod-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prod-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "41.58.239.207/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-4208103924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064aca5f1c9f3a0cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.prod-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prod-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2039292317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e115802df1c0a3e7",
            "self": false,
            "source_security_group_id": "sg-064aca5f1c9f3a0cf",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.prod-cluster",
            "aws_security_group.prod-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "prod-node-ingress-self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-619698927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e115802df1c0a3e7",
            "self": false,
            "source_security_group_id": "sg-0e115802df1c0a3e7",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.prod-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:051309595190:subnet/subnet-0129b1754e584255a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0129b1754e584255a",
            "map_public_ip_on_launch": false,
            "owner_id": "051309595190",
            "tags": {
              "Name": "terraform-eks-prod-node",
              "kubernetes.io/cluster/eks-kube-cluster": "shared"
            },
            "vpc_id": "vpc-0291b670a83da30e2"
          },
          "depends_on": [
            "aws_vpc.prod",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:051309595190:subnet/subnet-09910bd144f255383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09910bd144f255383",
            "map_public_ip_on_launch": false,
            "owner_id": "051309595190",
            "tags": {
              "Name": "terraform-eks-prod-node",
              "kubernetes.io/cluster/eks-kube-cluster": "shared"
            },
            "vpc_id": "vpc-0291b670a83da30e2"
          },
          "depends_on": [
            "aws_vpc.prod",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:051309595190:vpc/vpc-0291b670a83da30e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b54e34d3cfa41705",
            "default_route_table_id": "rtb-00077aab3b55913b8",
            "default_security_group_id": "sg-06068fed82cfd0950",
            "dhcp_options_id": "dopt-53a1c035",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0291b670a83da30e2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00077aab3b55913b8",
            "owner_id": "051309595190",
            "tags": {
              "Name": "terraform-eks-prod-node",
              "kubernetes.io/cluster/eks-kube-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}